Remove --add-module arguments that are not needed