@@ -1,4 +1,3 @@
 #!/bin/sh
-java -p BZDEV_DIR --add-modules org.bzdev.desktop \
-     --add-modules org.bzdev.ejws \
-     -classpath JARDIRECTORY/webnail-VERSION.jar webnail/Webnail "$@"
+java -p BZDEV_DIR -classpath JARDIRECTORY/webnail-VERSION.jar \
+     webnail/Webnail "$@"
